# serialization

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GLOSSARY.md  README.md  pyproject.toml  visuals.html
appendices/appendix_a_custom_binary/: README.md  custom_format.py  visual.html
appendices/appendix_b_streaming_serialization/: README.md  ndjson_streaming.py  proto_streaming.py  visual.html
benchmarks/: README.md  encode_decode.py  memory_allocation.py  payload_size.py
chapters/ch00_foundations/: README.md  __main__.py  alignment.py  endianness.py  memory_layout.py  visual.html
chapters/ch01_plain_text_csv/: README.md  __main__.py  csv_from_scratch.py  csv_stdlib.py  pain_points.py  visual.html
chapters/ch02_json/: README.md  __main__.py  json_from_scratch.py  json_stdlib.py  pain_points.py  visual.html
chapters/ch03_msgpack_cbor/: README.md  __main__.py  cbor_lib.py  msgpack_from_scratch.py  msgpack_lib.py  pain_points.py  visual.html
chapters/ch04_protobuf/: README.md  __main__.py  fooddash.proto  proto_from_scratch.py  proto_lib.py  schema_evolution.py  visual.html
chapters/ch05_flatbuffers/: README.md  __main__.py  flatbuf_demo.py  flatbuf_from_scratch.py  fooddash.fbs  visual.html  zero_copy_proof.py
chapters/ch06_avro/: README.md  __main__.py  avro_from_scratch.py  avro_lib.py  fooddash.avsc  schema_registry.py  visual.html
exercises/: ch00_ch01_exercises.md  ch02_ch03_exercises.md  ch04_ch05_exercises.md  ch06_ch07_exercises.md  ch08_ch10_exercises.md  ch11_exercises.md
shared/: __init__.py  bench.py  models.py  sample_data.py
(+29 files in other folders)
